[FEAT] [UME-80] : Get list hot provider
